<resources>
    <string name="app_name">DriversScore</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_login">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_begin">Begin</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_plate_number">Plate number should have 7 or 8 characters</string>
    <string name="action_log_out">Log out</string>
    <string name="action_haveAccount">Do not have an account?</string>
    <string name="action_notHaveAccount">Do you already have an account?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="field_save">Save</string>
    <string name="field_sync">Synchronize</string>
    <string name="field_communicate">Communication</string>
    <string name="field_tools">Tools</string>
    <string name="newPlate">New Plate</string>
    <string name="plateNum">Plate number</string>
    <string name="score">Score</string>
    <string name="maker">Maker</string>
    <string name="bodyType">Body type</string>
    <string name="region">Region</string>
    <string name="chose_body_type">Chose body type</string>
    <string name="chose_color">Chose color</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="error_AlreadyExists">Already rated</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_rating">Rating</string>
    <string name="pref_title_plate_compare">Plate comparing</string>
    <string name="pref_title_sync_mode">Sync mode</string>
    <string name="pref_title_enableSpecialCommands">Enable special commands</string>
    <string name="pref_title_cam_interval">Camera interval</string>
    <string name="pref_title_special_command">Special command</string>
    <string name="myScore">MyScore</string>
    <string name="plates">Plates</string>
    <string name="CarMode">Car mode</string>
    <string name="field_return_to_app">Return to application</string>

    <!-- Arrays -->
    <string-array name="pref_plate_compare_titles">
        <item>Local mode</item>
        <item>Server mode</item>
        <item>Combined mode</item>
    </string-array>
    <string-array name="pref_plate_compare_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_sync_mode_titles">
        <item>After app starts</item>
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every 1 hour</item>
        <item>Every 3 hours</item>
        <item>On demand</item>
    </string-array>
    <string-array name="pref_sync_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="photo_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Manual enter</item>
    </string-array>
</resources>
