<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings">
    <PreferenceCategory
        android:key="data_sync"
        android:title="@string/pref_header_data_sync">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_plate_compare_titles"
            android:entryValues="@array/pref_plate_compare_values"
            android:key="plate_compare"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_plate_compare" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_sync_mode_titles"
            android:entryValues="@array/pref_sync_mode_values"
            android:key="sync_mode"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_sync_mode" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="rating"
        android:title="@string/pref_header_rating">

        <EditTextPreference
            android:defaultValue="5"
            android:key="cam_interval"
            android:summary="5"
            android:title="@string/pref_title_cam_interval" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="special_commands_enabled"
            android:summary="Turn this option on or off"
            android:title="@string/pref_title_enableSpecialCommands" />

        <EditTextPreference
            android:defaultValue="1"
            android:dependency="special_commands_enabled"
            android:icon="@drawable/ic_face_very_satisfied"
            android:key="special_command_1"
            android:summary="1"
            android:title="@string/pref_title_special_command" />

        <EditTextPreference
            android:defaultValue="2"
            android:dependency="special_commands_enabled"
            android:icon="@drawable/ic_face_satisfied"
            android:key="special_command_2"
            android:summary="2"
            android:title="@string/pref_title_special_command" />

        <EditTextPreference
            android:defaultValue="3"
            android:dependency="special_commands_enabled"
            android:icon="@drawable/ic_face_neutral"
            android:key="special_command_3"
            android:summary="3"
            android:title="@string/pref_title_special_command" />

        <EditTextPreference
            android:defaultValue="4"
            android:dependency="special_commands_enabled"
            android:icon="@drawable/ic_face_sad"
            android:key="special_command_4"
            android:summary="4"
            android:title="@string/pref_title_special_command" />

        <EditTextPreference
            android:defaultValue="5"
            android:dependency="special_commands_enabled"
            android:icon="@drawable/ic_face_very_sad"
            android:key="special_command_5"
            android:summary="5"
            android:title="@string/pref_title_special_command" />
    </PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>