<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:minHeight="50dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="7dp">

    <ImageView
        android:id="@+id/ivCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:contentDescription="@string/bodyType"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        app:srcCompat="@drawable/sedan_standard" />

    <TextView
        android:id="@+id/tvMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:paddingEnd="0dp"
        android:paddingStart="50dp"
        android:text="@string/prompt_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvPlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:paddingEnd="90dp"
        android:paddingStart="0dp"
        android:text="@string/prompt_name"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ivScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:contentDescription="@string/score"
        android:paddingEnd="60dp"
        android:paddingStart="0dp"
        />

    <ImageView
        android:id="@+id/ivMyScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:contentDescription="@string/myScore"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        />
</android.support.v7.widget.CardView>